tests/builtin_collision_struct_logger_bad.sl
// Verifies top-level declarations cannot collide with public builtin types.
struct Logger {}
